# dynlin

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
driver/: CMakeLists.txt  main.cxx
include/: Dynlin.hxx
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_dynlin.cxx  test_set1.cxx  test_set2.cxx  test_set3.cxx  test_set4.cxx  test_set5.cxx  test_set6.cxx
